package it.univaq.unigest.common;

public interface Identificabile<ID> {
    ID getId();
    void setId(ID id);
}
